<resources>
    <string name="app_name">Rental</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn"><u>sign up</u></string>
    <string name="features">Features</string>
    <string name="car_details">Car Details</string>
    <string name="location">Location</string>
    <string name="per_minute">Per minute</string>
    <string name="book_now">Book now</string>
    <string name="capacity">Capacity</string>
    <string name="_4_seats">4 Seats</string>
    <string name="_507_m">507 m</string>
</resources>