<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreFragment"
    android:background="@color/gray">

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_details"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        />
    <ImageView
        android:id="@+id/details_heart"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/vector_1_"
        android:layout_alignParentEnd="true"
        android:layout_margin="12dp"/>

    <ImageView
        android:id="@+id/details_car_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tesla"
        android:layout_below="@+id/details"
        android:adjustViewBounds="true"
        android:layout_marginEnd="25dp"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/details_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="27dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/white"
        android:layout_below="@+id/details_car_img"
        android:layout_marginTop="-40dp"
        >
        <RelativeLayout
            android:id="@+id/details_RelativeL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp">

            <TextView
                android:id="@+id/details_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Tesla Model 3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_car_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_car_name"
                android:layout_marginBottom="10dp"
                android:text="A car with high specs, rented at an affordable price \nwhat are you waiting for !" />

            <TextView
                android:id="@+id/details_specs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_car_desc"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/features"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/details_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_specs"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/details_capacity"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_below="@id/details_specs"
                    app:cardBackgroundColor="@color/PrimeSecond"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="-5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/details_capacity_icon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/carr" />

                        <TextView
                            android:id="@+id/details_capacity_cap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/capacity"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"/>

                        <TextView
                            android:id="@+id/details_cap_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_4_seats"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/details_acceleration"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_below="@id/details_specs"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/details_capacity"
                    app:cardBackgroundColor="@color/PrimeSecond"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="-5dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_margin="10dp">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/speed" />

                        <TextView
                            android:id="@+id/details_speed_speed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="3dp"/>

                        <TextView
                            android:id="@+id/details_speed_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="200km/h"
                            android:textStyle="bold"/>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/details_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_linear"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/details_location_card"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/details_location"
                app:cardBackgroundColor="@color/PrimeSecond"
                app:cardCornerRadius="8dp"
                app:cardElevation="-5dp"
                android:layout_marginBottom="30dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="32dp"
                    android:layout_height="40dp"
                    android:src="@drawable/location"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/details_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$7.5"
                android:layout_below="@+id/details_location_card"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/details_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_minute"
                android:layout_below="@+id/details_price"
                />
            <Button
                android:id="@+id/details_book_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_location_card"
                android:layout_alignParentEnd="true"
                android:text="@string/book_now"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>




</RelativeLayout>